# battery_trading_model

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/battery_trading_model/: constants.py  fetch_data.py  main.py  model.py  solver.py  utils.py  visualisation.py
src/battery_trading_model/data/: apx_data_2023.csv  n2ex_data_2023.csv  ons_data_2023.csv  ssp_data_2023.csv
