[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery_trading_model"
version = "0.1.0"
description = "Battery Trading Model"
authors = [{name = "Georgie Mansell"}]
dependencies = [
    "pandas==3.0.0",
    "openpyxl==3.1.5",
    "pathlib==1.0.1",
    "PuLP==3.3.0",
    "ruff==0.15.0",
    "pre_commit==4.5.1",
    "plotly==6.5.2",
    "pytest==9.0.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]